src_old/objects/ProjectServiceEquipment__c.object
<CustomObject>
    <description>Relates Equipment to a Project Service. Equipment from Retailer Service Equipment is added by default when a Service is added to a Project Service. Additional Equipment can also be added to the project. Project Service Equipment is related to Project Service and Equipment.</description>
    <fields>
        <fullName>EquipmentName__c</fullName>
        <formula>Equipment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equipment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Project Service Equipment</relationshipLabel>
        <relationshipName>ProjectServiceEquipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Record cannot be deleted.</description>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>Project Service Equipment</relationshipLabel>
        <relationshipName>ProjectServiceEquipment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <description>Prevents duplicate rows. Used by workflow rule field update.</description>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project Service Equipment</label>
    <nameField>
        <displayFormat>PSE-{0000000}</displayFormat>
        <label>Project Service Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Equipment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Quantity_not_equal_to_zero_or_gt_99999</fullName>
        <active>true</active>
        <errorConditionFormula>Quantity__c &lt;= 0  || Quantity__c &gt; 99999</errorConditionFormula>
        <errorMessage>Quantity cannot be less that or equal to zero (0) or greater than 99999.</errorMessage>
    </validationRules>
</CustomObject>